[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprite/Menus/Options.png" type="Texture" id=1]
[ext_resource path="res://Menus/Options/Options.gd" type="Script" id=2]
[ext_resource path="res://Sprite/Menus/Marker2.png" type="Texture" id=3]
[ext_resource path="res://Fonts/Minecraft.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Menus/Options/OptionsPositions.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 260, 60 )
script = ExtResource( 2 )

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 199, 139 )
color = Color( 0.188235, 0.188235, 0.188235, 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Marker" type="Sprite" parent="."]
position = Vector2( 129, 97 )
texture = ExtResource( 3 )

[node name="Positions" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Controls" type="Position2D" parent="Positions"]
position = Vector2( 129, 97 )

[node name="Controls" type="Button" parent="Positions/Controls"]
margin_left = -57.0
margin_top = -18.0
margin_right = 57.0
margin_bottom = 18.0
mouse_default_cursor_shape = 2
action_mode = 0
flat = true

[node name="Volume" type="Position2D" parent="Positions"]
position = Vector2( 129, 129 )

[node name="Volume" type="Button" parent="Positions/Volume"]
margin_left = -57.0
margin_top = -14.0
margin_right = 57.0
margin_bottom = 18.0
mouse_default_cursor_shape = 2
action_mode = 0
flat = true

[node name="Back" type="Button" parent="."]
margin_top = 232.0
margin_right = 52.0
margin_bottom = 254.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 1 )
action_mode = 0
text = "Back"
flat = true

[node name="BackCover" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 85.0
margin_top = 149.0
margin_right = -77.0
margin_bottom = -73.0
rect_pivot_offset = Vector2( 199, 139 )
color = Color( 0.188235, 0.188235, 0.188235, 1 )

[connection signal="mouse_entered" from="Positions/Controls/Controls" to="Positions" method="_on_Controls_mouse_entered"]
[connection signal="pressed" from="Positions/Controls/Controls" to="Positions" method="_on_Controls_pressed"]
[connection signal="mouse_entered" from="Positions/Volume/Volume" to="Positions" method="_on_Volume_mouse_entered"]
[connection signal="pressed" from="Positions/Volume/Volume" to="Positions" method="_on_Volume_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
